welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: not found: value ecrtMessage
			ecrtMessage(cpt + inter)
                        ^