welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	var cpt = 0
	var inter = 0
	var h = getMondeHauteur() - 1
	var l = getMondeLargeur() - 1
	for (i<- 0 to h) {
		for (g<- 0 to l ) {
			setPos(i,g)
			ecrtMessage(cpt + inter)
		}
		if (inter == 6 ) {
			inter = 0 
		} else {
			inter = 6
		}
		}
		
	}
	
